src/global.css
@import "modern-normalize";

:root {
  --color-black: #000;
  --color-gray-200: #eeecec;
  --color-gray-300: #cecaca;
  --color-gray-400: #aaa2a2;
  --color-gray-500: #776e6e;
  --color-gray-600: #5d5656;
  --color-gray-700: #403b3b;
  --color-gray-800: #201d1d;
  --color-green-500: #00a982;
  --color-red-400: #f65577;
  --color-red-500: #f42752;
  --color-red-600: #da0b37;
  --color-white: #fff;

  --color-background: var(--color-black);
  --color-background-accent: var(--color-green-500);
  --color-background-danger: var(--color-red-500);
  --color-background-muted: var(--color-gray-800);
  --color-border: var(--color-gray-700);
  --color-text: var(--color-white);
  --color-text-button: var(--color-white);
  --color-text-danger: var(--color-red-400);
  --color-text-muted: var(--color-gray-400);

  @media (prefers-color-scheme: light) {
    --color-background: var(--color-white);
    --color-background-accent: var(--color-green-500);
    --color-background-danger: var(--color-red-500);
    --color-background-muted: var(--color-gray-200);
    --color-border: var(--color-gray-300);
    --color-text: var(--color-black);
    --color-text-button: var(--color-white);
    --color-text-danger: var(--color-red-600);
    --color-text-muted: var(--color-gray-600);
  }

  --content-padding: 16px;

  font-family:
    system,
    -apple-system,
    Roboto,
    sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-synthesis: none;
  font-weight: 400;
  line-height: 24px;
  -webkit-tap-highlight-color: transparent;
  text-rendering: optimizeLegibility;
  -webkit-text-size-adjust: 100%;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  user-select: none;
}

button,
h1,
h2,
h3,
h4,
h5,
figure,
p,
pre,
ol,
ul {
  margin: 0;
  padding: 0;
}

ol,
ul {
  list-style: none;
  padding-inline: 0;
}

h1,
h2,
h3,
h4,
h5 {
  font-size: inherit;
  font-weight: inherit;
}

a {
  color: inherit;
  text-decoration: none;
}

button,
input {
  background: none;
  border: 0;
  color: inherit;
  outline: none;
}

body {
  background: var(--color-background);
  color: var(--color-text);
  font-size: 16px;
  height: 100dvh;
  padding: env(safe-area-inset-top) env(safe-area-inset-right)
    env(safe-area-inset-bottom) env(safe-area-inset-left) !important;
  position: relative;
}

h1 {
  font-size: 26px;
  font-weight: bold;
}

h2 {
  font-size: 20px;
}

pre {
  font-family: inherit;
  overflow-wrap: break-word;
  text-wrap: wrap;
}

#root {
  display: flex;
  flex-direction: column;
  height: 100%;
}

